Update chapter header information

--- a/comm_norms.adoc
+++ b/comm_norms.adoc
@@ -1,4 +1,6 @@
 = Communication norms in open source software projects
+Authors: Leslie Hawthorn <lhawthor@redhat.com>
+Updated: 2020-10-29
 
 == Introduction
 
