--- a/test-preview-1.99-book.adoc
+++ b/test-preview-1.99-book.adoc
@@ -3,18 +3,17 @@ Contributors <contrib@theopensourceway.org>
 v1.99, 2020-10-31
 :toc: left
 
-PREVIEW RELEASE
-TEST BUILD
+_*PREVIEW RELEASE -- TEST BUILD*_
 
-include::presenting-tosw.adoc[]
+include::BUILD_TEMP-presenting-tosw.adoc[]
 
-include::why_people_participate.adoc[]
+include::BUILD_TEMP-why_people_participate.adoc[]
 
-include::comm_norms.adoc[]
+include::BUILD_TEMP-comm_norms.adoc[]
 
-include::community_governance.adoc[]
+include::BUILD_TEMP-community_governance.adoc[]
 
-include::creating_diverse_inclusive_communities.adoc[]
+include::BUILD_TEMP-creating_diverse_inclusive_communities.adoc[]
 
-include::community-manager-self-care.adoc[]
+include::BUILD_TEMP-community-manager-self-care.adoc[]
 
