Renaming file to match convention - Unknown reason for it being the wrong convention, now fixed - Included in this are updates to the build files that also remove the chapter creating_diverse_inclusive_communities.adoc while the author finishes her review of edits.

--- a/test-preview-1.99-book.adoc
+++ b/test-preview-1.99-book.adoc
@@ -13,7 +13,7 @@ include::BUILD_TEMP-comm_norms.adoc[]
 
 include::BUILD_TEMP-community_governance.adoc[]
 
-include::BUILD_TEMP-creating_diverse_inclusive_communities.adoc[]
+// include::BUILD_TEMP-creating_diverse_inclusive_communities.adoc[]
 
-include::BUILD_TEMP-community-manager-self-care.adoc[]
+// include::BUILD_TEMP-community_manager_self_care.adoc.adoc[]
 
