Rename file to match convention

--- a/preview-1.99-book.adoc
+++ b/preview-1.99-book.adoc
@@ -3,7 +3,7 @@
 PREVIEW RELEASE
 TEST BUILD
 
-include::presenting-tosw.adoc[]
+include::presenting_tosw.adoc[]
 
 include::why_people_participate.adoc[]
 
